2015-12-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 37337: Src/Zle/zle.h, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c: Delay freeing widget until not in use.

	* 37335: Test/D04parameter.ztst, Test/V09datetime.ztst: fix
	tests after 37314.

	* 37310: Doc/Zsh/builtins.yo: effect of disabling typeset
	reserved word.

2015-12-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 37326: Src/utils.c: comment how counting for multibyte string
	lengths and widths is supposed to work.

	* 37314: Src/utils.c, Src/zsh.h: upgrade quotedzputs() to use
	nicechar() where necessary.  Regularise nicechar() etc. to prodduce
	$'...' compatible output.

2015-12-05  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37150: Completion/Unix/Command/_git: _git: Autocomplete .. for
	commit ranges

	* 36957: Completion/Unix/Command/_git: _git: Apply matchspecs to
	filename completion such as 'git log f/b<TAB>' → 'foo/bar.txt's

2015-12-04  Peter Stephenson  <p.stephenson@samsung.com>

	* 37305: Src/params.c, Test/A06assign.ztst,
	Test/B02typeset.ztst, Test/V10private.ztst: typeset -p
	can now output arrays on one line.

	* unposted: Src/exec.c, Src/init.c: fix up init_io() calls
	in previous change.

	* 37294: Doc/Zsh/params.yo, Src/init.c: Add $ZSH_EXECUTION_STRING
	to give argument to shell -c option.

2015-12-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37253: Src/params.c: Constify two local variables.

	* unposted: Completion/Unix/Command/_getent,
	Completion/Unix/Command/_mtools,
	Completion/Unix/Type/_mime_types,
	Completion/X/Command/_kfmclient, Completion/Zsh/Command/_zed:
	Remove uneeded executability bits.

	* 37296: Src/utils.c: Avoid needless calloc().

	* 37295: Functions/Zle/backward-kill-word-match,
	Functions/Zle/kill-word-match: Join kills

2015-12-03  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Config/version.mk: update to 5.2-dev-0.

	* unposted: Config/version.mk: release zsh 5.2 (N.B. this entry
	added ex post facto as a marker).
