@@ -1,3 +1,8 @@
+2015-12-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* 37331: Src/utils.c: use a single character to represent an
+	MB_INCOMPLETE string even if multiple octets.
+
 2015-12-07  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* 37337: Src/Zle/zle.h, Src/Zle/zle_main.c,
